force-app/main/default/objects/OpportunityLineItem/fields/AcessoryGroup__c.field-meta.xml
<CustomField>
    <fullName>AcessoryGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Acessorios do kit</label>
    <referenceTo>GrupoAcessorios__c</referenceTo>
    <relationshipLabel>Itens da linha da Oportunidade</relationshipLabel>
    <relationshipName>ParentOppLines</relationshipName>
    <type>Lookup</type>
</CustomField>