force-app/main/default/objects/OpportunityLineItem/fields/ParentProduct__c.field-meta.xml
<CustomField>
    <fullName>ParentProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto do kit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens da linha de cotação</relationshipLabel>
    <relationshipName>ParentProductsOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>